# rusty-dot

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  Cargo.toml  README.md  coverage.xml  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  citation-cff.yml  docs.yml  ruff.yml
api/: index.html
api/cross_index/: index.html
api/dotplot/: index.html
api/functions/: index.html
api/paf_io/: index.html
api/sequence_index/: index.html
development/: index.html
docs/: development.md  index.md  installation.md
docs/api/: cross_index.md  dotplot.md  functions.md  index.md  paf_io.md  sequence_index.md
docs/tutorials/: all_vs_all_two_indices.ipynb  dotplot_tutorial.ipynb  minimap2_paf_tutorial.ipynb  paf_workflow.ipynb  quickstart.ipynb
installation/: index.html
python/rusty_dot/: __init__.py  _rusty_dot.pyi  annotation.py  dotplot.py  paf_io.py
search/: search_index.json
src/: error.rs  fasta.rs  index.rs  kmer.rs  lib.rs  main.rs  merge.rs  paf.rs  serialize.rs  strand.rs
tests/: conftest.py  test_annotation.py  test_data.py  test_dotplot.py  test_fasta.py  test_index.py  test_kmer.py  test_merge.py  test_paf.py  test_paf_io.py  test_serialize.py  test_strand.py
tutorials/all_vs_all_two_indices/: index.html
tutorials/dotplot_tutorial/: dotplot_tutorial.ipynb  index.html
tutorials/minimap2_paf_tutorial/: index.html  minimap2_paf_tutorial.ipynb
tutorials/paf_workflow/: index.html  paf_workflow.ipynb
tutorials/quickstart/: index.html  quickstart.ipynb
