[package]
name = "rusty-dot"
version = "0.1.0"
edition = "2021"
description = "Fast dot plot comparisons of DNA sequences using an FM-Index"
license = "MIT"

[lib]
name = "_rusty_dot"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rusty-dot"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
needletail = { version = "0.6", features = ["compression"] }
bio = "2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
ahash = "0.8"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
