[package]
name = "rusty-dot"
version = "0.1.0"
edition = "2021"
description = "Fast dot plot comparisons of DNA sequences using an FM-Index"
license = "MIT"

[lib]
name = "_rusty_dot"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rusty-dot"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
# Use needletail without default-features so the wasm build can opt out of
# the C-based compression backends (bzip2-sys, liblzma-sys, zstd-sys).
# The "compression" feature re-enables them for native builds.
needletail = { version = "0.6", default-features = false }
bio = "2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
ahash = "0.8"
thiserror = "1.0"

[features]
# Native (default): enable bzip2/xz/zstd via needletail's "compression" feature.
# Wasm builds should use --no-default-features to avoid C-based compression.
default = ["compression"]
compression = ["needletail/compression"]

[dev-dependencies]
tempfile = "3.0"
