[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rusty-dot"
version = "0.1.0"
description = "Fast dot plot comparisons of DNA sequences using an FM-Index"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["bioinformatics", "dotplot", "fm-index", "sequence-comparison"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["matplotlib>=3.5", "numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "maturin>=1.0"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rusty_dot._rusty_dot"
