[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rusty-dot"
version = "0.1.0"
description = "Fast dot plot comparisons of DNA sequences using an FM-Index"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.14"
keywords = ["bioinformatics", "dotplot", "fm-index", "sequence-comparison"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["matplotlib>=3.5", "numpy>=1.21"]

[project.optional-dependencies]
dev = [
    "isort",
    "maturin>=1.0",
    "numpydoc-validation",
    "pydocstyle",
    "mypy",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "ruff",
]

docs = [
    "mkdocs>=1.5,<2.0",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]

[project.urls]
documentation = "https://github.com/adamtaranto/rusty-dot"
homepage = "https://github.com/adamtaranto/rusty-dot"
repository = "https://github.com/adamtaranto/rusty-dot"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rusty_dot._rusty_dot"

[tool.pytest.ini_options]
addopts = "-v --cov=rusty_dot --cov-branch --cov-report=xml --cov-report=term"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "C", # mccabe rules
    "F", # pyflakes rules
    "E", # pycodestyle error rules
    "W", # pycodestyle warning rules
    "B", # flake8-bugbear rules
    "I", # isort rules
    #"D", # pydocstyle rules
]
ignore = [
    "C901", # max-complexity-10
    "E501", # line-too-long
    "I001", # isort-imports
    "B905", # `zip()` without an explicit `strict=` parameter
]

# Don't auto-fix docstring issues - they're too fragile
unfixable = ["D"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"] # Ignore all pydocstyle rules in tests

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["rusty_dot"]
known-third-party = ["matplotlib", "numpy"]

[tool.isort]
profile = "black"
known_third_party = ["matplotlib", "numpy"]
known_first_party = ["rusty_dot"]
default_section = "THIRDPARTY"
force_sort_within_sections = true

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks
    "ES01", # but don't require an extended summary
    "EX01", # or examples
    "SA01", # or a see also section
    "SS06", # and don't require the summary to fit on one line
]
exclude = [ # don't report on checks for these
    '\.__init__$',
    '\.__repr__$',
    '\.__str__$',
]
override_SS05 = [ # allow docstrings to start with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pydocstyle]
convention = "numpy"
match-dir = "[^\\.].*"     # matches all dirs that don't start with a dot
match = "(?!test_).*\\.py" # matches files that don't start with 'test_' but end with '.py'

